# accurate-video-game-sheet-music

./: Cargo.toml  lilybuild-all.sh  lilybuild.sh  track-list.txt
c64/cybernoid-ii-the-revenge/: chapters-garageband.txt  foreground-color.txt
c64/lazy-jones/: chapters-garageband.txt  foreground-color.txt
c64/monty-on-the-run/: chapters-garageband.txt  escape-tunnel.vsf  foreground-color.txt  hall-of-jowan.vsf  monty-early.vsf  monty-pie-are-square.vsf
gb/donkey-kong-land/: chapters-garageband.txt  chapters.txt
gb/super-mario-land/: chapters-garageband.txt  chapters-old.txt
gb/super-mario-land-2-6-golden-coins/: chapters-garageband-new.txt  chapters-garageband.txt  chapters.txt
gb/tetris/: chapters-garageband.txt  chapters.txt
gb/the-legend-of-zelda-links-awakening/: chapters-garageband-old.txt  chapters-garageband.txt  chapters.txt
master-system/sonic-the-hedgehog/: chapters-garageband.txt  chapters.txt  foreground-color.txt
nes/balloon-fight/: chapters-garageband.txt  chapters.txt  foreground-color.txt
nes/donkey-kong/: chapters-garageband.txt  chapters.txt
nes/donkey-kong-jr/: chapters-garageband.txt  chapters.txt  foreground-color.txt
nes/earthbound-beginnings/: chapters-garageband.txt  chapters.txt  foreground-color.txt
nes/mario-bros/: chapters-garageband.txt  chapters.txt  foreground-color.txt
nes/super-mario-bros-2/: background-color.txt  chapters-garageband.txt  chapters-new.txt  chapters.txt
src/: book.rs  color.rs  main.rs
toads-house-tracks/: dmc.flac  pulse-1.flac  pulse-2.flac  triangle.flac
(+3213 files in other folders)
