[package]
name = "vgem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claxon = "0.4.3"
image = "0.24.5"
malachite = "0.4.15"
walkdir = "2.3.2"
palette = "0.5.0"
pdf-to-png = { path = "../../rust/pdf-to-png" }
